# investment-tool

./: .gitignore  README.md  pyproject.toml
config/: README.md  feed_modules.json  market_price_universe.json  owned_positions.json  source_modules.json  ticker_registry.json
docs/: ai-vector-pass-design.md  ai_storage_infographics.html  architecture-chat-readme.md  architecture-overview.md  article-feed-spec.md  article-source-spec.md  backlog.md  code-organization-spec.md  custom-gpt-action-openapi.local.json  custom-gpt-actions-backend-spec.md  custom-gpt-builder-instructions.md  feed-record-spec.md  legacy-retrieval-note.md  market-data-spec.md  media-handling-spec.md  pipeline-orchestrator-plan.md  presentation-spec.md  run-reporting-spec.md  screenshot-feed-spec.md  screenshot-source-spec.md  source-record-spec.md  start-new-codex-chat.md  storage-layout.md  ticker-metadata-spec.md  workstreams.md  x-reconstruction-spec.md
prompts/: manual_screenshot_reconstruction.md  media_description.md  thread_pass1_system.md  thread_pass1_user.md  thread_pass2_system.md  thread_pass2_user.md
schemas/: manual_screenshot_reconstruction.schema.json  media_description.schema.json  thread_pass1.schema.json  thread_pass2.schema.json
scripts/: action_server.py  analyze_media.py  capture_hardcore.py  import_manual_thread.py  sync_market_prices.py  sync_threads_to_vector_store.py  x_thread_media_probe.py
tests/: test_analysis_openai.py  test_articles_ingest.py  test_capture_threads_media.py  test_descriptions.py  test_feed_config.py  test_filters.py  test_hardcore_capture.py  test_import_compatibility.py  test_import_paths.py  test_manual_threads.py  test_market_prices.py  test_media_analysis.py  test_openai_api.py  test_presentation_threads.py  test_prices.py  test_raw_thread_rebuild.py  test_reporting.py  test_runtime_config.py  test_runtime_paths.py  test_runtime_reporting.py  test_screenshot_bundles.py  test_source_config.py  test_storage_migration.py  test_storage_rename.py  test_thread_filtering.py  test_ticker_parser.py  test_tickers.py  test_workflow_cli.py  test_x_api.py  test_x_capture_phases.py  test_x_media.py  test_x_raw_rebuild.py  (+2 more)
(+108 files in other folders)
