[project]
name = "investment-tool"
version = "0.1.0"
requires-python = ">=3.10"
description = "Local configurable investment research capture and analysis tool"

[project.scripts]
investment-tool-x-capture = "investment_tool.capture_threads:main"
investment-tool-hardcore-capture = "investment_tool.hardcore_capture:main"
investment-tool-market-prices = "investment_tool.market_prices:main"
investment-tool-vector-sync = "investment_tool.vector_store_sync:main"
investment-tool-action-server = "investment_tool.action_server:main"
investment-tool-media-analysis = "investment_tool.media_analysis:main"
investment-tool-manual-thread-import = "investment_tool.manual_threads:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
