[project]
name = "investment-tool"
version = "0.1.0"
requires-python = ">=3.10"
description = "Local configurable investment research capture and analysis tool"

[project.scripts]
investment-tool = "investment_tool.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
